fix: stretch by vertical in card section guarantees

--- a/src/shared/ui/site/sections/s-site-main/s-site-main.scss
+++ b/src/shared/ui/site/sections/s-site-main/s-site-main.scss
@@ -259,7 +259,9 @@
     @media (max-width: 991px) {
       max-width: torem(320);
     }
-
+    @media screen and (max-width: 767px) {
+      padding: torem(24);
+    }
     &-value {
       font-family: Jakarta, sans-serif;
       //font-size: torem(42);
@@ -267,9 +269,28 @@
       line-height: 130%;
       font-weight: 800;
       margin-bottom: torem(4);
+      height: 100%;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      &--wrapper {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+     
+      &--title {
+        font-size: 24px;
+        line-height: 28px;
+        text-align: left;
+      }
+      &--description {
+        font-size: 16px;
+        text-align: left;
+        line-height: 120%;
+        margin-top: 16px;
+        font-weight: 500;
+      }
+      
     }
 
     &-description {
